# Sim2RealLab

./: .env.example  .gitignore  Makefile  Readme.md  TYPE_STUBS_README.md  collapse_log.txt  env_setup.sh  setup_physics_log.txt
source/strafer_autonomy/: README.md  pyproject.toml
source/strafer_autonomy/strafer_autonomy/: __init__.py  cli.py
source/strafer_autonomy/strafer_autonomy/clients/: __init__.py  databricks_planner_client.py  databricks_vlm_client.py  planner_client.py  ros_client.py  vlm_client.py
source/strafer_autonomy/strafer_autonomy/databricks/: __init__.py  planner_model.py  register.py  vlm_model.py
source/strafer_autonomy/strafer_autonomy/executor/: __init__.py  command_server.py  frontier.py  main.py  mission_runner.py
source/strafer_autonomy/strafer_autonomy/planner/: __init__.py  app.py  intent_parser.py  llm_runtime.py  payloads.py  plan_compiler.py  prompt_builder.py
source/strafer_autonomy/strafer_autonomy/schemas/: __init__.py  grounding.py  mission.py  observation.py
source/strafer_autonomy/strafer_autonomy/semantic_map/: __init__.py  background_mapper.py  clip_encoder.py  manager.py  models.py  room_state.py  transit_monitor.py
source/strafer_autonomy/tests/: conftest.py  test_bbox_extractor.py  test_bridge_cmd_watchdog.py  test_bridge_config.py  test_bridge_proprio.py  test_command_server.py  test_databricks_clients.py  test_databricks_models.py  test_dataset_export.py  test_describe_scene.py  test_executor_main.py  test_explore_until_visible.py  test_finetune_scripts.py  test_frontier.py  test_infinigen_label_parser.py  test_intent_parser.py  test_navigate_staging.py  test_new_skills.py  test_perception_writer.py  test_plan_compiler.py  test_planner_client.py  test_planner_endpoints.py  test_prep_room_usds.py  test_progress_aware_timeouts.py  test_prompt_builder.py  test_room_state.py  test_ros_client.py  test_scan_for_target.py  test_scene_labels.py  test_semantic_map.py  test_sim_in_the_loop_extras.py  test_sim_in_the_loop_harness.py  test_sim_in_the_loop_mission.py  test_sim_in_the_loop_runtime_env.py  test_spatial_description.py  test_transit_monitor.py  test_translate_rotate_then_drive.py
source/strafer_lab/: README.md  pyproject.toml  run_tests.py  setup.py
source/strafer_lab/config/: extension.toml
source/strafer_lab/scripts/: benchmark_policy.py  bridge_harness_smoke.py  build_mission_corpus.py  capture.py  collect_demos.py  collect_perception_data.py  coverage_capture.py  depth_camera_vfov_probe.py  export_policy.py  extract_scene_metadata.py  finetune_clip.py  generate_descriptions.py  generate_scenes_metadata.py  measure_path_statistics.py  measure_perception_exposure.py  play_strafer_navigation.py  postprocess_scene_usd.py  prep_room_usds.py  prepare_vlm_finetune_data.py  probe_rt2_depth_integrity.py  render_grounded_mission_corpus.py  roller_bounce_probe.py  run_sim_in_the_loop.py  teleop_capture.py  test_strafer_env.py  validate_scene_connectivity.py
source/strafer_lab/scripts/asset_authoring/: collapse_redundant_xforms.py  inspect_robot_prim_layout.py  run_empty_lab.py  setup_physics.py
source/strafer_lab/scripts/floor_plans/: true_singleroom.json  true_tworoom.json
source/strafer_lab/scripts/retired/: finetune_clip.py  prepare_vlm_finetune_data.py
source/strafer_lab/scripts/type_stubs/: README.md  generate_stubs.py  test_stubs.py
source/strafer_lab/strafer_lab/: __init__.py  compat.py
source/strafer_lab/strafer_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
source/strafer_lab/strafer_lab/assets/: __init__.py  strafer.py
source/strafer_lab/strafer_lab/bridge/: __init__.py  async_camera_publisher.py  async_publisher.py  cmd_watchdog.py  config.py  graph.py  obs_dump.py  obs_dump_terms.py  proprio.py  renderer_settings.py
source/strafer_lab/strafer_lab/sim_in_the_loop/: __init__.py  extras.py  harness.py  lerobot_recorder.py  mission.py  runtime_env.py  runtime_mission.py
source/strafer_lab/strafer_lab/tasks/: __init__.py
source/strafer_lab/strafer_lab/tools/: __init__.py  bbox_extractor.py  build_mission_queue.py  coverage_plan.py  dataset_export.py  depth_probe.py  detections_overlay.py  gamepad_reader.py  grounding_frame_provider.py  grounding_injection.py  infinigen_label_parser.py  lerobot_depth.py  lerobot_detections.py  lerobot_writer.py  mission_queue.py  mission_text_builder.py  path_statistics.py  perception_writer.py  phase_profiler.py  scene_classes.py  scene_connectivity.py  scene_labels.py  scene_metadata_reader.py  scene_paths.py  spatial_description.py  subgoal_controller.py  teleop_buttons.py  teleop_mission_picker.py  teleop_perf_knobs.py  teleop_physics.py
source/strafer_lab/test/: __init__.py  conftest.py
source/strafer_lab/test_sim/: conftest.py
source/strafer_lab/tests/: conftest.py  test_export_policy.py  test_load_policy.py  test_obs_contract_parity.py  test_recurrent_contract_e2e.py
source/strafer_ros/strafer_bringup/: package.xml  setup.cfg  setup.py
source/strafer_ros/strafer_inference/: package.xml  setup.cfg  setup.py
source/strafer_ros/strafer_msgs/: CMakeLists.txt  package.xml
source/strafer_ros/strafer_navigation/: package.xml  setup.cfg  setup.py
source/strafer_ros/strafer_perception/: package.xml  setup.cfg  setup.py
source/strafer_ros/strafer_slam/: package.xml  setup.cfg  setup.py
source/strafer_shared/: pyproject.toml
source/strafer_shared/strafer_shared/: __init__.py  constants.py  mecanum_kinematics.py  policy_interface.py
source/strafer_shared/strafer_shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
source/strafer_vlm/: README.md  pyproject.toml
source/strafer_vlm/scripts/: live_qwen25vl_grounding.py  test_qwen25vl_grounding.py
source/strafer_vlm/strafer_vlm/: __init__.py  eval_qwen25vl_grounding.py  live_qwen25vl_grounding.py  qwen_vl_common.py  test_qwen25vl_grounding.py  train_qwen25vl_lora.py
source/strafer_vlm/tests/: conftest.py  test_dataset_io.py  test_describe_endpoint.py  test_detect_objects.py  test_parsing.py  test_prompt.py  test_service_endpoints.py
(+785 files in other folders)
