[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "strafer-autonomy"
version = "0.1.0"
description = "Autonomy planning and schema layer for Strafer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
ros = []  # rclpy and other ROS 2 deps are sourced from the colcon workspace, not PyPI
planner = ["fastapi>=0.100", "uvicorn[standard]>=0.20", "transformers>=4.45", "torch>=2.0", "accelerate>=0.20"]

[project.scripts]
strafer-autonomy-cli = "strafer_autonomy.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["strafer_autonomy*"]
