<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>strafer_bringup</name>
  <version>0.1.0</version>
  <description>Composed launch files for the GoBilda Strafer robot</description>
  <maintainer email="jetson@localhost.local">jetson</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>strafer_driver</exec_depend>
  <exec_depend>strafer_description</exec_depend>
  <exec_depend>strafer_perception</exec_depend>
  <exec_depend>strafer_slam</exec_depend>
  <exec_depend>strafer_navigation</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
